# michka

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  License.md  Readme.md  readme.md  test.txt
.github/workflows/: tests.yml
include/Michka/: Michka.h
include/Michka/Core/: Defines.h  Helpers.h
include/Michka/Core/Container/: Color.h  Hash.h  List.h  Map.h  Pair.h  Position.h  Rect.h  Size.h  String.h  Variant.h  Vector.h
include/Michka/Core/Exception/: Exception.h
include/Michka/Core/Foundation/: Event.h  EventManager.h  File.h  Log.h  Object.h  Types.h
include/Michka/Core/Math/: BoundingBox.h  BoundingSphere.h  Matrix.h  Matrix3.h  Plane.h  Quaternion.h  Ray.h  Utility.h  Vector2.h  Vector3.h  Vector4.h
include/Michka/Core/Memory/: Memory.h
include/Michka/Core/Reflection/: MetaAttributes.h  Property.h  Type.h  TypeInfo.h
include/Michka/Core/Thread/: Mutex.h  Thread.h
include/Michka/Graphics/: Device.h  GraphicDefines.h  Image.h  IndexBuffer.h  Shader.h  Texture.h  VertexBuffer.h  VertexDeclaration.h
include/Michka/Platform/: Utility.h  Window.h
include/Michka/Platform/Windows/: OpenGLSupport.h  Window.h
scripts/: build.py  generator.py  requirements.txt
scripts/cpp_parser/: __init__.py  cpp_parser.py
shaders/: test.frag  test.glsl  test.vert
src/: Michka.h  Mishka.h  main.cpp
src/Core/: CMakeLists.txt  Core.h  Defines.h  Exception.h  Helpers.h  Helpers.inl  List.h  List.inl  Map.h  Map.inl  Memory.cpp  Memory.h  Memory.inl  Pair.h  Pair.inl  String.cpp  String.h  String.inl  Thread.h  Type.h  Type.inl  Types.cpp  Types.h  Vector.h  Vector.inl
src/Core/Container/: Color.cpp  Color.h  Color.inl  Hash.h  Hash.inl  List.h  List.inl  Map.h  Map.inl  Pair.h  Pair.inl  Position.h  Position.inl  Rect.h  Rect.inl  Size.h  Size.inl  String.cpp  String.h  String.inl  Variant.cpp  Variant.h  Variant.inl  Vector.h  Vector.inl
src/Core/Exception/: Exception.h
src/Core/Foundation/: Event.cpp  Event.h  Event.inl  EventManager.cpp  EventManager.h  EventManager.inl  File.cpp  File.h  Log.cpp  Log.h  Log.inl  Object.h  Object.inl  Types.cpp  Types.h  Types.inl
src/Core/Math/: BoundingBox.cpp  BoundingBox.h  BoundingBox.inl  BoundingSphere.cpp  BoundingSphere.h  BoundingSphere.inl  Matrix.cpp  Matrix.h  Matrix.inl  Matrix3.cpp  Matrix3.h  Matrix3.inl  Plane.cpp  Plane.h  Plane.inl  Quaternion.cpp  Quaternion.h  Quaternion.inl  Ray.cpp  Ray.h  Ray.inl  Utility.cpp  Utility.h  Utility.inl  Vector2.cpp  Vector2.h  Vector2.inl  Vector3.cpp  Vector3.h  Vector3.inl  Vector4.cpp  Vector4.h  Vector4.inl
src/Core/Memory/: Memory.cpp  Memory.h  Memory.inl
src/Core/Reflection/: ClassReflection.cpp  ClassReflection.h  MetaAttributes.cpp  MetaAttributes.h  MetaProperties.cpp  MetaProperties.h  Property.cpp  Property.h  Reflection.cpp  Reflection.h  ReflectionClass.cpp  ReflectionClass.h  ReflectionClass.inl  Type.h  Type.inl  TypeInfo.cpp  TypeInfo.h  TypeInfo.inl
src/Core/Thread/: Mutex.h  Thread.cpp  Thread.h
src/Graphics/: CMakeLists.txt  Device.cpp  Device.h  GraphicDefines.h  Graphics.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  VertexDeclaration.cpp  VertexDeclaration.h
src/Graphics/Direct3D12/: D3D12Device.cpp  D3D12Device.h
src/Graphics/OpenGL/: Device.cpp  IndexBuffer.cpp  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLHeaders.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  Shader.cpp  Texture.cpp  VertexBuffer.cpp
src/Platform/: CMakeLists.txt  Platform.h  Thread.inl  Utility.cpp  Utility.h  Window.h
src/Platform/Thread/: Thread.inl
src/Platform/Windows/: OpenGLSupport.cpp  OpenGLSupport.h  Thread.inl  Utility.inl  Window.cpp  Window.h
src/Platform/Windows/Thread/: Mutex.cpp  Thread.inl
tests/: CMakeLists.txt  MichkaTests.cpp  MichkaTests.h
tests/Classes/: Animal.h  CMakeLists.txt  MichkaObject.h  Person.cpp  Person.h  ReflectionClasses.h  Student.h  TestThread.h
tests/Core/: CMakeLists.txt  HelpersTest.cpp  ListTest.cpp  MapTest.cpp  MathUtilityTest.cpp  MatrixTest.cpp  QuaternionTest.cpp  StringTest.cpp  ThreadTest.cpp  TypeTest.cpp  TypesTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp  VectorTest.cpp
tests/Core/Container/: ColorTest.cpp  HashTest.cpp  ListTest.cpp  MapTest.cpp  PositionTest.cpp  RectTest.cpp  SizeTest.cpp  StringTest.cpp  VariantTest.cpp  VectorTest.cpp
tests/Core/Foundation/: EventTest.cpp  FileTest.cpp  LogTest.cpp  TypesTest.cpp
tests/Core/Math/: BoundingBoxTest.cpp  BoundingSphereTest.cpp  MathUtilityTest.cpp  Matrix3Test.cpp  MatrixTest.cpp  PlaneTest.cpp  QuaternionTest.cpp  RayTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp
tests/Core/Reflection/: ClassReflectionTest.cpp  MetaAttributesTest.cpp  MetaPropertiesTest.cpp  TypeTest.cpp
tests/Core/Thread/: ThreadTest.cpp
tests/Files/Core/: file_test_read.txt
tests/Files/Graphics/Shaders/: HelloTriangle.glsl  TextureFilter.glsl
tests/Graphics/: CMakeLists.txt  GraphicsTest.cpp  ImageTest.cpp  TextureTest.cpp  VertexDeclarationTest.cpp
tests/Platform/: CMakeLists.txt
tests/Platform/Windows/: WindowTest.cpp  WindowsUtilityTest.cpp
